experimental/ast/testdata/parser/syntax/lonely.proto.stderr
error: unexpected `;` in edition declaration
  --> testdata/parser/syntax/lonely.proto:15:8
   | 
15 | edition;
   |        ^ expected `=`

error: syntax declaration must be the first declaration in a file
  --> testdata/parser/syntax/lonely.proto:17:1
   | 
15 | edition;
   | -------- previous declaration
16 | 
17 | syntax = ;
   | ^^^^^^^^^^ expected this to be the first declaration

encountered 2 errors
